[package]
name = "rust-rock-paper-scissors-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_rock_paper_scissors_server"
crate-type = ["rlib", "cdylib"]

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
